# WTime

./: .gitignore  README.md  protome.xml
.github/workflows/: cmake.yml  maven-publish.yml  update-licenses.yml
cxx/: CMakeLists.txt  Makefile.am  Times.vcxproj  Times.vcxproj.filters  WTime.pc.in  config.h.in  configure.ac  test.cpp
cxx/include/: TimeZoneMapper.h  WTime.h  config.h  wtime.pb.h
cxx/include/internal/: RegionMap.inl  SunriseSunsetCalc.h  Times.h  WTimeProto.h  times_internal.h  worldlocation.h
cxx/src/: Canada_Detail.cpp  SunriseSunsetCalc.cpp  Times.cpp  Times.rc  TimezoneMapper.cpp  WTimeProto.cpp  worldlocation.cpp
cxx/test/: spanGTest.cpp  timeGTest.cpp
docs/assets/: navtree_data.js
docs/reference/: classes.html  current.xml  hierarchy.html  lists.js  package-list  packages.html
docs/reference/ca/hss/times/: SunriseSunsetCalc.html  TimeZoneInfo.html  WTime.WTimeComparator.html  WTime.html  WTimeManager.html  WTimeSpan.html  WorldLocation.TimeZoneGroup.html  WorldLocation.html  package-descr.html  package-summary.html
java/: .classpath  .gitignore  .project  build.xml  pom.xml
java/src/ca/hss/times/: RiseSetInput.java  RiseSetOut.java  SunriseSunsetCalc.java  TimeZoneInfo.java  WTime.java  WTimeManager.java  WTimeSpan.java  WorldLocation.java  package-info.java
java/src/main/java/ca/hss/times/: RiseSetInput.java  RiseSetOut.java  SunriseSunsetCalc.java  TimeZoneInfo.java  WTime.java  WTimeManager.java  WTimeSpan.java  WorldLocation.java  package-info.java
java/src/main/java/ca/hss/times/serialization/: TimeSerializer.java
java/src/test/java/ca/hss/times/: WTimeSpanTest.java  WTimeTest.java
proto/: wtime.proto
